default_old/objects/Account/fields/Account_Power_of_one__c.field-meta.xml
<CustomField>
    <fullName>Account_Power_of_one__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account - Power of one</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>