default_old/objects/Account/fields/cloudbear__nammend__c.field-meta.xml
<CustomField>
    <fullName>cloudbear__nammend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>nammend</label>
    <type>Checkbox</type>
</CustomField>