default_old/objects/Account/fields/cloudbear__NumberFix_Status__c.field-meta.xml
<CustomField>
    <fullName>cloudbear__NumberFix_Status__c</fullName>
    <description>This field is populated each time RingsTrue runs. It summarises the outcome of the validation.</description>
    <inlineHelpText>This field is populated each time RingsTrue runs. It summarises the outcome of the validation.</inlineHelpText>
    <label>RingsTrue Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Numbers Verified</fullName>
            </value>
            <value>
                <fullName>Partially Verified</fullName>
            </value>
            <value>
                <fullName>No Verified Numbers</fullName>
            </value>
            <value>
                <fullName>No Entered Numbers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>