default_old/objects/Account/fields/cloudbear__PhoneFix_Last_Review__c.field-meta.xml
<CustomField>
    <fullName>cloudbear__PhoneFix_Last_Review__c</fullName>
    <description>Date of last RingsTrue record review</description>
    <inlineHelpText>Date of last RingsTrue record review</inlineHelpText>
    <label>RingsTrue Last Review</label>
    <type>Date</type>
</CustomField>