default_old/objects/Account/fields/cloudbear__PhoneVerified__c.field-meta.xml
<CustomField>
    <fullName>cloudbear__PhoneVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this phone number been checked</description>
    <inlineHelpText>Has this phone number been checked</inlineHelpText>
    <label>RingsTrue Verified</label>
    <type>Checkbox</type>
</CustomField>