default_old/objects/Account/fields/isExternal__c.field-meta.xml
<CustomField>
    <fullName>isExternal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isExternal</label>
    <type>Checkbox</type>
</CustomField>