default_old/objects/Account/fields/KcloudData__Billing_Address_Verified__c.field-meta.xml
<CustomField>
    <fullName>KcloudData__Billing_Address_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deprecated(Billing Address Verified)</label>
    <type>Checkbox</type>
</CustomField>