default_old/objects/Account/fields/KcloudData__Fax_Verified__c.field-meta.xml
<CustomField>
    <fullName>KcloudData__Fax_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deprecated(Fax Verified)</label>
    <type>Checkbox</type>
</CustomField>