default_old/objects/Account/fields/KcloudData__Mailing_Address_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>KcloudData__Mailing_Address_Validation_Status__c</fullName>
    <label>Mailing Address Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>