default_old/objects/Account/fields/SLA_Expired__c.field-meta.xml
<CustomField>
    <fullName>SLA_Expired__c</fullName>
    <formula>SLAExpirationDate__c &lt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Expired</label>
    <type>Checkbox</type>
</CustomField>