default_old/objects/Account/fields/Test_Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>Test_Rich_Text__c</fullName>
    <label>Test Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>