default_old/objects/Account/fields/TestMultiPick__c.field-meta.xml
<CustomField>
    <fullName>TestMultiPick__c</fullName>
    <label>TestMultiPick</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>opt1</fullName>
            </value>
            <value>
                <fullName>opt2</fullName>
            </value>
            <value>
                <fullName>opt3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>