default_old/objects/Account/fields/TestNotes__c.field-meta.xml
<CustomField>
    <fullName>TestNotes__c</fullName>
    <defaultValue>$CustomMetadata.BouquetBuilder__mdt.Bouquet_Builder_Defaults.TestNotes__c</defaultValue>
    <label>TestNotes</label>
    <type>TextArea</type>
</CustomField>